--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
 baseurl = "https://example.org/"
 languageCode = "en-us"
-title = "Hugo Creative Theme"
+title = "GopherCon Singapore"
 theme = "hugo-creative-theme"
 
 [params]
@@ -28,54 +28,57 @@ theme = "hugo-creative-theme"
 
 	# Navigation
 	[params.navigation]
-		brand = "Hugo Creative Theme"
+		brand = "GopherCon Singapore 2017"
 
 		[params.navigation.links]
 			about     = "About"
-			services  = "Services"
-			portfolio = "Portfolio"
-			contact   = "Contact"
+			speakers  = "Schedule"
+			venue     = "Venue"
+			events    = "Events"
+			partners  = "Partners"
 
 
 	# Hero section
 	[params.hero]
 		# To change the background of the hero section, replace the 'header.jpg' at './static/img' with your own.
-		slogan     = "Your awesome slogan"
-		subtitle   = "[Lorem](//google.com) ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis nesciunt consequatur ut nihil voluptatem fugiat eos eveniet alias in veniam?"
-		buttonText = "Find out more"
+		slogan     = "GopherCon Singapore 2017"
+		subtitle   = "The inaugural Go conference in Singapore"
+		buttonText = "Register"
 
 
 	# About section
 	[params.about]
 		headline    = "We've got what you need!"
-		description = "[Lorem](//google.com) ipsum dolor sit amet, consectetur adipisicing elit. Praesentium similique eos eligendi error veritatis harum, sed aliquid totam, quam minus neque enim est architecto, ad. Maiores, aliquid, vitae!"
-		buttonText  = "Get started!"
 
 
-	# Service section
-	[params.services]
-		headline = "At your service"
+	# Speakers section
+	[params.speakers]
+		# headline = "At your service"
 
-        [[params.services.list]]
+        [[params.speakers.list]]
             icon = "fa-diamond"
             title = "Sturdy Templates"
             description = "Our templates are updated regularly so they don't break."
 
-        [[params.services.list]]
+        [[params.speakers.list]]
 			icon = "fa-paper-plane"
 			title = "Ready to Ship"
 			description = "You can use this theme as is, or you can make changes!"
 
-		[[params.services.list]]
+		[[params.speakers.list]]
             icon = "fa-newspaper-o"
             title = "Up to Date"
             description = "We update dependencies to keep things fresh."
 
-        [[params.services.list]]
+        [[params.speakers.list]]
             icon = "fa-heart"
             title = "Made with Love"
             description = "You have to make your websites with love these days!"
 
+  [params.events]
+      headline    = "We've got what you need!"
+      description = "[Lorem](//google.com) ipsum dolor sit amet, consectetur adipisicing elit. Praesentium similique eos eligendi error veritatis harum, sed aliquid totam, quam minus neque enim est architecto, ad. Maiores, aliquid, vitae!"
+      buttonText  = "Get started!"
 
     # Portfolio modals
 	[params.portfolio.modal]
@@ -86,15 +89,13 @@ theme = "hugo-creative-theme"
 
     # Aside section
 	[params.aside]
-		headline = "Get the Creative Theme for Hugo"
+		headline = "The Venue"
 
 		[params.aside.button]
 			text = "Download now"
 			link = "//github.com/digitalcraftsman/hugo-creative-theme"
 
-	# Contact section
-	[params.contact]
-		headline = "Let's Get In Touch!"
-		description = "Ready to start your next project with us? That's great! Give us a call or send us an email and we will get back to you as soon as possible!"
-		phone = "123-456-6789"
-		email = "feedback@startbootstrap.com"
+	# Partners section
+	[params.partners]
+		headline = "Proudly sponsored by:"
+		description = "Interested in becoming a sponsor? [Get in touch](//)"
