Footer should be at the bottom

--- a/config.toml
+++ b/config.toml
@@ -28,7 +28,7 @@ theme = "hugo-creative-theme"
 
 	# Navigation
 	[params.navigation]
-		brand = "GopherCon Singapore"
+		brand = "GoSG"
 
 		[params.navigation.links]
 			#about     = "About"
