Use temporary contact link for sponsors

--- a/config.toml
+++ b/config.toml
@@ -99,7 +99,7 @@ theme = "hugo-creative-theme"
 	[params.partners]
 		#headline = "Proudly sponsored by:"
 		headline = "Sponsors"
-		description = "Interested in becoming a sponsor? [Get in touch](//)"
+		description = "Interested in becoming a sponsor? [Get in touch](mailto:hello@gophercon.sg)"
 
 	# Footer section
 	[params.credits]
