add back pages and ignore rendering of markdown files instead

--- a/config.toml
+++ b/config.toml
@@ -2,6 +2,7 @@ baseurl = "https://gophercon.sg/"
 languageCode = "en-us"
 title = "GopherCon Singapore"
 theme = "hugo-creative-theme"
+ignoreFiles = ["\\.md$"]
 
 [params]
 
