fix and buttons position for mobile interface

--- a/config.toml
+++ b/config.toml
@@ -42,7 +42,7 @@ ignoreFiles = ["\\.md$"]
 	# Hero section
 	[params.hero]
 		# To change the background of the hero section, replace the 'header.jpg' at './static/img' with your own.
-		buttonText = "Register"
+		buttonText = "Get Tickets"
 
 	# About section
 	[params.about]
