Display Venues and Tickets in nav bar.
Show nav bar when any of the links are enabled.

--- a/config.toml
+++ b/config.toml
@@ -33,11 +33,10 @@ ignoreFiles = ["\\.md$"]
 
 		[params.navigation.links]
 			#about    = "About"
-			speakers  = "Schedule"
+			#speakers  = "Schedule"
+			#events    = "Events"
 			venue     = "Venue"
-			events    = "Events"
-			partners  = "Partners"
-
+      #partners = "Partners"
 
 	# Hero section
 	[params.hero]
