--- a/config.toml
+++ b/config.toml
@@ -62,7 +62,7 @@ theme = "hugo-creative-theme"
        profile = "dave_cheney.jpg"
        name = "Dave Cheney"
        brand = "https://twitter.com/davecheney"
-       bio = "David is a programmer, public speaker, and author from Sydney Australia. David has been a contributor to the Go project since February 2011 and is an organiser of GopherCon Denver. David currently works at Atlassian building Kubernetes infrastructure for their internal platform as a service."
+       bio = "David is a programmer, public speaker, and author from Sydney, Australia. David has been a contributor to the Go project since February 2011 and is an organiser of GopherCon Denver. David currently works at Atlassian building Kubernetes infrastructure for their internal platform as a service."
        #talk = "Talk: To be announced"
 
     [params.speakers.speaker_gopher]
