Set up HTTPS redirect and 2017. subdomain

--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseurl = "https://gophercon.sg/"
+baseurl = "https://2017.gophercon.sg/"
 languageCode = "en-us"
 title = "GopherCon Singapore"
 theme = "hugo-creative-theme"
