add workshop venue location

--- a/config.toml
+++ b/config.toml
@@ -91,7 +91,7 @@ theme = "hugo-creative-theme"
     timerange = "9.00am to 5.30pm"
     title = "Ultimate Go Workshop"
     date = "Thursday, 25th May"
-    venue = "(To be confirmed)"
+    venue = "Amazon Web Services, 23 Church Street, #10-01, Singapore 049481"
     venueinfo = "Lunch is provided"
     type = "Workshop"
     instructor = "William Kennedy"
