Add speaker: Robert Griesemer

--- a/config.toml
+++ b/config.toml
@@ -51,25 +51,19 @@ theme = "hugo-creative-theme"
 
 	# Speakers section
 	[params.speakers]
-		# headline = "At your service"
-#    [params.speakers.speaker1]
-#       profile = "Robert-Griesemer.jpg"
-#       name = "Robert Griesemer"
-#       bio = "Awesome Hacker"
-#       talk = "name of the talk"
-
     [params.speakers.speaker]
+       profile = "Robert-Griesemer.jpg"
+       name = "Robert Griesemer"
+       fragmentId = "robert-griesemer"
+       brand = "https://github.com/griesemer"
+       bio = "Robert is one of the creators of the Go programming language. Before Go, he was involved in the design and implementation of Google's V8 JavaScript engine, the domain-specific language Sawzall, the Java HotSpot virtual machine, and Strongtalk, a high-performance Smalltalk system. Once upon a time, he built a vectorizing compiler for the iconic Cray X-MP. Robert works at Google in Mountain View, California, and loves energy-efficient things that \"just work\"."
+
+    [params.speakers.speaker1]
        profile = "dave_cheney.jpg"
        name = "Dave Cheney"
        fragmentId = "dave-cheney"
        brand = "https://twitter.com/davecheney"
        bio = "David is a programmer, public speaker, and author from Sydney, Australia. David has been a contributor to the Go project since February 2011 and is an organiser of GopherCon Denver. David currently works at Atlassian building Kubernetes infrastructure for their internal platform as a service."
-       #talk = "Talk: To be announced"
-
-    [params.speakers.speaker_gopher]
-       profile = "gopher_merlion.png"
-       name = "More Awesome Gophers"
-       caption = "To be announced"
 
     [params.speakers.speaker2]
        profile = "bill.jpg"
@@ -77,6 +71,12 @@ theme = "hugo-creative-theme"
        fragmentId = "william-kennedy"
        brand = "https://twitter.com/goinggodotnet"
        bio = "William Kennedy is a managing partner at Ardan Studio in Miami, Florida, a mobile, web, and systems development company. He is also a co-author of the book Go in Action, the author of the blog [GoingGo.Net](http://goinggo.net), and a founding member of [GoBridge](https://golangbridge.org/) which is working to increase Go adoption through diversity."
+
+    [params.speakers.speaker_gopher]
+       profile = "gopher_merlion.png"
+       name = "More Awesome Gophers"
+       caption = "To be announced"
+
 
   [params.events]
       headline    = "We've got what you need!"
