Add speaker: Ajey Gore

--- a/config.toml
+++ b/config.toml
@@ -72,6 +72,13 @@ theme = "hugo-creative-theme"
        brand = "https://twitter.com/goinggodotnet"
        bio = "William Kennedy is a managing partner at Ardan Studio in Miami, Florida, a mobile, web, and systems development company. He is also a co-author of the book Go in Action, the author of the blog [GoingGo.Net](http://goinggo.net), and a founding member of [GoBridge](https://golangbridge.org/) which is working to increase Go adoption through diversity."
 
+    [params.speakers.speaker3]
+       profile = "ajey-gore.jpg"
+       name = "Ajey Gore"
+       fragmentId = "ajey-gore"
+       brand = "https://twitter.com/goinggodotnet"
+       bio = "Ajey is the Group CTO of [Go-Jek](https://www.go-jek.com/). With 17 years of experience in building core technology strategy across diverse domains, Ajey has helped several businesses through technology transformations @ [ThoughtWorks](https://www.thoughtworks.com/) and [CodeIgnition](https://twitter.com/codeignition). Ajey is the founder of CodeIgnition and an active influencer in the technology community."
+
     [params.speakers.speaker_gopher]
        profile = "gopher_merlion.png"
        name = "More Awesome Gophers"
