Added speaker + talk data
Some questions remain:
- How to add multi-line text in config
- Should we actually use the config for data (seems counter intuitive)?
- Should change the id of speaker (in params.speakers.<speakerID>).
  This seems to be lexically sorted, so "speaker10" comes before
"speaker2"

--- a/config.toml
+++ b/config.toml
@@ -79,8 +79,86 @@ theme = "hugo-creative-theme"
        fragmentId = "ajey-gore"
        brand = "https://twitter.com/goinggodotnet"
        bio = "Ajey is the Group CTO of [Go-Jek](https://www.go-jek.com/). With 17 years of experience in building core technology strategy across diverse domains, Ajey has helped several businesses through technology transformations @ [ThoughtWorks](https://www.thoughtworks.com/) and [CodeIgnition](https://twitter.com/codeignition). Ajey is the founder of CodeIgnition and an active influencer in the technology community."
+       talk = "test2"
 
-    [params.speakers.speaker_gopher]
+    # --------------------------------------
+
+    [params.speakers.speaker_talk_a]
+       profile = "gopher_merlion.png"
+       name = "Do Xuan Huy"
+       fragmentId = "do-xuan-huy"
+       brand = "https://twitter.com/dxhuy"
+       bio = "Huy's a software engineer working at LINE corp in the group called engineering effeciency. His group mission is to reduce painful point of development process, building tools which make software development and shipment easier, more fun and safer. Previous to golang, he's a heavy user of Ruby, and also one of founder of Vietnam biggest Ruby user group. He'd also co-founded one of biggest social platform for software engineer in Vietname: kipalog (https://kipalog.com)"
+       title = "How golang help us to solve organization scale problem at LINE"
+       abstract = "Grow to 400 millions registered users in only 5 years lead to not only scale problem of system, but also scale problem of organization. In LINE we solve that problem by building tools which improve engineer productivity and unify process. In this presentation i will introduce about those tools."
+
+    [params.speakers.speaker_talk_b]
+       profile = "gopher_merlion.png"
+       name = "Chewxy"
+       fragmentId = "chewxy"
+       brand = "https://twitter.com/chewxy"
+       bio = "Xuanyi co-founded a startup that uses natural language to perform data science analysis."
+       title = "Writing Efficient Generic Multidimensional Slices"
+       abstract = "Go has no generics. That makes things a lot harder. Or does it? This talk looks at various attempts in creating multidimensional arrays (think matrices and tensors) which are useful in deep learning and mathematics heavy applications. Even better - making them generic so they can take any type"
+
+    [params.speakers.speaker_talk_c]
+       profile = "gopher_merlion.png"
+       name = "Matthew Campbell"
+       fragmentId = "matthew-campbell"
+       brand = "https://twitter.com/kanwisher"
+       bio = "Matthew Campbell is a Microservices scalability expert at DigitalOcean where he builds the future of cloud services. He is writting a book called “Microservices in Go”. He recently presented at GoLang UK, PromConf Berling, and Surge India, and blogs at “kanwisher.com”:http://kanwisher.com. Matthew was a founder of “Errplane”:http://errplane.com/ and “Langfight”:http://www.langfight.com. In the past he worked at Thomson Reuters, Bloomberg, Gucci, and Cartoon network."
+       title = "Distributed Scheduler Hell"
+       abstract = "Containers are the future for all Microservice based apps. Where do you deploy them? How do you manage them? This talk will walk the audience through how distributed schedulers are built, and how the popular ones work. We will drill into details of how to build a distributed scheduler."
+
+    [params.speakers.speaker_talk_d]
+       profile = "gopher_merlion.png"
+       name = "Dave Appleton"
+       fragmentId = "dave-appleton"
+       brand = "https://twitter.com/AppletonDave"
+       bio = "Dave Appleton has been messing around with things since sometime before the dawn of time.  Mentored by people with more technical expertise than interpersonal skills and business sense, Dave started programming in 1968 in FORTRAN, building audio systems about the same time and messing with digital logic in 1976.  In the intervening time he has built world beating test systems, co-designed award winning products, run his own instrumentation company for over fifteen years, learned and actually used more than two dozen programming languages at a professional level, and taught courses from hobby to degree level on subjects as diverse as IOT, e-commerce and Image Processing. For the last three years he has been working on crypto currencies and financial technology."
+       title = "Getting started on Ethereum for Go programmers"
+       abstract = "Learn how a Go programmer can get started with the hottest blockchain technology on the block with an easy tutorial that will demonstrate creating a simple smart contract and accessing it from a Go server as well as an Ethereum Wallet.  "
+
+    [params.speakers.speaker_talk_e]
+       profile = "gopher_merlion.png"
+       name = "Ryan Law"
+       fragmentId = "ryan-law"
+       brand = ""
+       bio = "Ryan is currently a Site Reliability Engineer at Grab. Being one of Grab’s early engineers, he has extensive knowledge of Grab’s system and he makes use of it by diving deep into different technical problems on a daily basis. Before switching over to his current role, Ryan led the web frontend and the Ruby on Rails teams at Grab."
+       title = "Distributed Tracing in Grab"
+       abstract = "In Grab, we went from monolithic services to multiple smaller services in Go and we missed the ability to have detailed transaction traces of our code. In this talk, we will show you how we are re-implementing this ability in Go, a language that does not support thread-locals"
+
+    [params.speakers.speaker_talk_f]
+       profile = "gopher_merlion.png"
+       name = "Ent"
+       fragmentId = "ent"
+       brand = ""
+       bio = "I am a Software Developer with over 8 years of experience where I have majorly worked with Python for Startups. Apart from building the software for the clients, one major issue I had to repeatedly deal with was the way Python was designed and how I had to fight against it to achieve the desired functionality. This led me to read and understand how Python internals work; which in turn only made me feel the need for a more elegantly designed runtime.  Initially I did not appreciate Go but the more I read about its design, the more it felt like a properly done language/runtime. After using it for a few small projects, it was easier to appreciate it and propose using it at work. I have learned a decent bit and continue to learn the interesting parts of Go but perhaps the path could have been easier if certain topics were more accessible.  Purpose of my Talk My proposed talk is about topics which I feel if I had a consolidated article/talk on, it would have been easier for me to learn faster while making fewer mistakes along the way. I believe that I might not be the only one who would benefit from these topics and I would like to present them to Go community if possible."
+       title = "Runtime & Concurrency in Go."
+       abstract = "One popular feature of Go is Goroutine. Yet, not everyone knows how Goroutines work under the hood or what factors need to be taken into consideration when working with them. This talk attempts to explain rationale behind Green Threads & Coroutines and how Goroutines are linked to them."
+
+    [params.speakers.speaker_talk_g]
+       profile = "gopher_merlion.png"
+       name = "Manish Rai Jain"
+       fragmentId = "maish-rai-jain"
+       brand = "https://twitter.com/manishrjain"
+       bio = "Manish is the founder of Dgraph, a distributed graph database built for production. He got thrust into distributed systems right out of college, working on real-time web indexing system at Google. He then led various projects to consolidate and serve knowledge graph right behind web search.  Implementing GTD and Zero Waste practices, Manish is into efficient and minimalist living. He loves cycling, swimming and ultra-light traveling."
+
+       title = "Dgraph - A distributed graph database written in Go"
+       abstract = "Dgraph is a native and distributed graph database written entirely in Go. Efficient distributed joins is a hard problem and Dgraph tackles it head on. Since v0.1 release in Dec’15, Dgraph has seen a lot of activity, reaching close to 2000 Github stars and to front page of Hacker News multiple times."
+
+    [params.speakers.speaker_talk_h]
+       profile = "gopher_merlion.png"
+       name = "Choon Keat"
+       fragmentId = "choon-keat"
+       brand = "https://twitter.com/choonkeat"
+       bio = "Started the Singapore Ruby Brigade, worked at Slideshare, believes strongly in and contributes to open source. Now available in Go."
+
+       title = "TDD for those who don't need it"
+       abstract = "For the longest time, I don’t write tests.  Writing tests is chore, waste of time, doesn’t GTD. The snobbery of test community only turned me off even more; discouraging good developers from trying TDD.  Now I write tests first. This talk explains what clicked for me (and maybe you will too)"
+
+    # --------------------------------------
+    [params.speakers.speaker_talk_z]
        profile = "gopher_merlion.png"
        name = "More Awesome Gophers"
        caption = "To be announced"
